force-app/main/default/objects/Monthly_Managed_Service__c/Monthly_Managed_Service__c.object-meta.xml
<CustomObject>
    <label>Monthly Managed Service</label>
    <nameField>
        <displayFormat>MMS-{000000000}</displayFormat>
        <label>Monthly Managed Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Managed Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>