force-app/main/default/objects/Monthly_Managed_Service__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Monthly Managed Services</relationshipLabel>
    <relationshipName>Monthly_Managed_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>