force-app/main/default/objects/Monthly_Managed_Service__c/fields/Case_Allotment__c.field-meta.xml
<CustomField>
    <fullName>Case_Allotment__c</fullName>
    <inlineHelpText>Number of cases available, including what was carried over from last month.</inlineHelpText>
    <label>Case Allotment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>