force-app/main/default/objects/Monthly_Managed_Service__c/fields/Case_Overage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Case_Overage_Cost__c</fullName>
    <inlineHelpText>Charged by the Case.</inlineHelpText>
    <label>Case Overage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>