force-app/main/default/objects/Monthly_Managed_Service__c/fields/Cases_Over__c.field-meta.xml
<CustomField>
    <fullName>Cases_Over__c</fullName>
    <formula>IF(((Total_Cases__c -  Case_Allotment__c) &lt; 0), 0, Total_Cases__c -  Case_Allotment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cases Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>