force-app/main/default/objects/Monthly_Managed_Service__c/fields/Cases_to_Carryover__c.field-meta.xml
<CustomField>
    <fullName>Cases_to_Carryover__c</fullName>
    <formula>IF(((Case_Allotment__c -  Total_Cases__c) &lt; 0), 0, Case_Allotment__c -  Total_Cases__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cases to Carryover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>