force-app/main/default/objects/Monthly_Managed_Service__c/fields/Developer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Developer_Hours__c</fullName>
    <inlineHelpText>Number of developer hours available, including what was carried over from last month.</inlineHelpText>
    <label>Developer Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>