force-app/main/default/objects/Monthly_Managed_Service__c/fields/Developer_Hours_Over__c.field-meta.xml
<CustomField>
    <fullName>Developer_Hours_Over__c</fullName>
    <formula>IF(((Total_Developer_Hours__c -  Developer_Hours__c) &lt; 0), 0, Total_Developer_Hours__c -  Developer_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Hours Over</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>