force-app/main/default/objects/Monthly_Managed_Service__c/fields/Developer_Hours_to_Carryover__c.field-meta.xml
<CustomField>
    <fullName>Developer_Hours_to_Carryover__c</fullName>
    <formula>IF(((Developer_Hours__c -  Total_Developer_Hours__c) &lt; 0), 0, Developer_Hours__c -  Total_Developer_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Hours to Carryover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>