force-app/main/default/objects/Monthly_Managed_Service__c/fields/Developer_Overage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Developer_Overage_Cost__c</fullName>
    <inlineHelpText>Charged for each hour over.</inlineHelpText>
    <label>Developer Overage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>