force-app/main/default/objects/Monthly_Managed_Service__c/fields/Monthly_Base_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Base_Cost__c</fullName>
    <label>Monthly Base_Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>