force-app/main/default/objects/Monthly_Managed_Service__c/fields/Monthly_Case_Overage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Case_Overage_Cost__c</fullName>
    <formula>Cases_Over__c * Case_Overage_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This equals the number of cases over, times the case overage cost.</inlineHelpText>
    <label>Monthly Case Overage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>