force-app/main/default/objects/Monthly_Managed_Service__c/fields/Monthly_Developer_Overage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Developer_Overage_Cost__c</fullName>
    <formula>Developer_Hours_Over__c *  Developer_Overage_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This equals the number developer hours over, times the developer overage cost.</inlineHelpText>
    <label>Monthly Developer Overage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>