force-app/main/default/objects/Monthly_Managed_Service__c/fields/Monthly_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Total_Cost__c</fullName>
    <formula>Monthly_Base_Cost__c + Monthly_Case_Overage_Cost__c + Monthly_Developer_Overage_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the monthly case cost, plus any overages.</inlineHelpText>
    <label>Monthly Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>