force-app/main/default/objects/Monthly_Managed_Service__c/fields/Total_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases__c</fullName>
    <label>Total Cases</label>
    <summaryFilterItems>
        <field>Monthly_Managed_Service_Activity__c.Activity_Type__c</field>
        <operation>equals</operation>
        <value>Case</value>
    </summaryFilterItems>
    <summaryForeignKey>Monthly_Managed_Service_Activity__c.Monthly_Managed_Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>