force-app/main/default/objects/Monthly_Managed_Service__c/fields/Total_Developer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Developer_Hours__c</fullName>
    <label>Total Developer Hours</label>
    <summarizedField>Monthly_Managed_Service_Activity__c.Development_Time_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Monthly_Managed_Service_Activity__c.Activity_Type__c</field>
        <operation>equals</operation>
        <value>Development</value>
    </summaryFilterItems>
    <summaryForeignKey>Monthly_Managed_Service_Activity__c.Monthly_Managed_Service__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>